fix: update stylesheet version and adjust letter display for improved animation on mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>💕 De Mi, Para Ti 💕</title>
-    <link rel="stylesheet" href="styles.css?v=20260210-1">
+    <link rel="stylesheet" href="styles.css?v=20260212-1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@400;600&family=Great+Vibes&display=swap" rel="stylesheet">
@@ -29,8 +29,10 @@
                 <div class="seal-inner">❤</div>
             </div>
         </div>
-        
-        <div class="letter" id="letter">
+    </div>
+
+    <!-- Carta separada del sobre para posicionamiento independiente -->
+    <div class="letter" id="letter">
             <!-- Página 1-2: Carta de amor -->
             <div class="letter-content-wrapper page-1 active">
                 <div class="letter-page left">
@@ -153,7 +155,6 @@
                 <span>✕</span>
             </button>
         </div>
-    </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="script.js"></script>
