fix: update stylesheet version, enhance background animation, and improve letter content clarity

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>💕 De Mi, Para Ti 💕</title>
-    <link rel="stylesheet" href="styles.css?v=20260212-1">
+    <link rel="stylesheet" href="styles.css?v=20260212-2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@400;600&family=Great+Vibes&display=swap" rel="stylesheet">
@@ -117,7 +117,7 @@
                         </div>
                         <div class="reason-item secret-message" data-secret="4. Porque eres el amor de mi vida y mi mejor decisión ❤">
                             <span class="reason-number">?</span>
-                            <span class="reason-text">Pasa el cursor aquí para descubrir...</span>
+                            <span class="reason-text">Pulsa aquí para descubrir...</span>
                         </div>
                         <div class="reason-item">
                             <span class="reason-number">5.</span>
@@ -133,6 +133,10 @@
                         </div>
                         <div class="reason-item">
                             <span class="reason-number">8.</span>
+                            <span class="reason-text">Eres una cosita toda hermosa preciosa</span>
+                        </div>
+                        <div class="reason-item">
+                            <span class="reason-number">9.</span>
                             <span class="reason-text">Simplemente por ser tú</span>
                         </div>
                     </div>
